# environments

./: .environments.toml  .gitignore  .pdm-python  .pre-commit-config.yaml  .yamlfmt  CHANGELOG.md  Justfile  README.md  book.toml  cog.toml  flake.nix  one  pyproject.toml  pyproject.toml.templ  ruff.toml
.environments/: environments.toml
.environments/documentation/: Justfile
.environments/environments/: Justfile  shell.nix
.environments/just/: environments.just  python.just
.environments/nix/: Justfile  environments.nix
.environments/python/: Justfile
.environments/scripts/: environment.nu  help.nu
.github/workflows/: commit-check.yml  deploy.yml  mdbook.yml
.helix/: languages.toml
documentation/: book.toml  configuration.md  installation.md  introduction.md
documentation/src/: SUMMARY.md  installation.md  introduction.md
init/: flake.nix  init.nu
just/: environments.just  python.just
nix/: environments.nix
scripts/: check.nu  dependencies.nu  environment.nu  filesystem.nu  find-script.nu  help.nu  issue.nu  pre-commit-update.nu  release.nu  remote.nu  replace.nu  test.nu  todo.nu  update.nu  view-source.nu
scripts/environments/: build.nu  help.nu  justfile.nu  pre-commit-update.nu  preview-layout.kdl  preview.nu  readme.nu  reload.nu  sort-gitignores.nu  update.nu
scripts/python/: build.nu  command.nu  dependencies.nu  help.nu  remove.nu  run.nu  update.nu  version.nu
src/: flake.nix  shell-hook.nu
src/.scripts/: environments-file.nu
src/c/: .clang-tidy  Justfile  flake.nix  languages.toml  shell.nix
tera/: git.toml  python.toml
(+374 files in other folders)
